--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -72,6 +72,133 @@
     "\n",
     "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "822b88ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Define the function for initializing the inventory with error handling\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_quantity = False\n",
+    "        while not valid_quantity:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity < 0:\n",
+    "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
+    "                valid_quantity = True\n",
+    "            except ValueError as error:\n",
+    "                print(f\"Error: {error}\")\n",
+    "        inventory[product] = quantity\n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65d1f87a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modify the `calculate_total_price` function to include error handling\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    prices = {}\n",
+    "    for product in set(customer_orders):\n",
+    "        while True:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price for {product}: \"))\n",
+    "                if price < 0:\n",
+    "                    raise ValueError(\"Price cannot be negative.\")\n",
+    "                prices[product] = price\n",
+    "                break\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Invalid input: {e}. Please enter a valid price.\")\n",
+    "    \n",
+    "    total_price = sum(prices[product] for product in customer_orders)\n",
+    "    print(f\"The total price of the customer order is: ${total_price:.2f}\")\n",
+    "    return total_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d7e84276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modify the `get_customer_orders` function to include error handling\n",
+    "def get_customer_orders(inventory):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "            if num_orders < 0:\n",
+    "                raise ValueError(\"Number of orders cannot be negative.\")\n",
+    "            break\n",
+    "        except ValueError as e:\n",
+    "            print(f\"Invalid input: {e}. Please enter a valid number of orders.\")\n",
+    "    \n",
+    "    customer_orders = []\n",
+    "    for i in range(num_orders):\n",
+    "        while True:\n",
+    "            product_name = input(f\"Enter product name for order {i+1}: \")\n",
+    "            if product_name in inventory and inventory[product_name] > 0:\n",
+    "                customer_orders.append(product_name)\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Invalid product name or out of stock. Please enter a valid product name.\")\n",
+    "    \n",
+    "    return customer_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2ffa1ea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Invalid quantity! Please enter a non-negative value.\n",
+      "Error: Invalid quantity! Please enter a non-negative value.\n",
+      "Invalid product name or out of stock. Please enter a valid product name.\n",
+      "Invalid product name or out of stock. Please enter a valid product name.\n",
+      "Invalid input: Price cannot be negative.. Please enter a valid price.\n",
+      "The total price of the customer order is: $16.00\n",
+      "\n",
+      "Inventory: {'t-shirt': 2, 'mug': 5, 'hat': 2, 'book': 1, 'keychain': 8}\n",
+      "Customer Orders: ['mug', 'hat', 'keychain']\n",
+      "Total Price: $16.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    # Define available products\n",
+    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "    \n",
+    "    # Initialize inventory with error handling\n",
+    "    inventory = initialize_inventory(products)\n",
+    "    \n",
+    "    # Get customer orders with error handling\n",
+    "    customer_orders = get_customer_orders(inventory)\n",
+    "    \n",
+    "    # Calculate total price of orders with error handling\n",
+    "    total_price = calculate_total_price(customer_orders)\n",
+    "    \n",
+    "    # Print inventory, orders and total price\n",
+    "    print(\"\\nInventory:\", inventory)\n",
+    "    print(\"Customer Orders:\", customer_orders)\n",
+    "    print(f\"Total Price: ${total_price:.2f}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
@@ -90,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
